--- a/shop.html
+++ b/shop.html
@@ -149,7 +149,7 @@
         </span>
         <p class="text-gray-600 font-medium">Shop</p>
   </div>
-  <!-- breadcrums -->
+  <!-- breadcrums end -->
 
 <!-- shop wrapper -->
 
