--- a/account.html
+++ b/account.html
@@ -168,8 +168,116 @@
                     </div>
                </div>
             <!-- account profile end -->
+            <!-- profile links -->
+              <div class="mt-6 bg-white shadow rounded  p-4 divide-y divide-gray-200  space-y-4 text-gray-600">
+                  <!-- single link -->
+                   <div class="space-y-1 pl-8 ">
+                      <a href="#" class="relative text-primary block font-medium capitalize  transition">
+                        <span class="absolute -left-8  top-0 text-base"><i class="far fa-address-card"></i></span>
+                        Manage account
+                      </a>
+                      <a href="#" class="relative hover:text-primary block font-medium capitalize transition">
+                        profile info
+                      </a>
+                      <a href="#" class="relative hover:text-primary block font-medium capitalize transition">
+                         manage address
+                      </a>
+                      <a href="#" class="relative hover:text-primary block font-medium capitalize transition">
+                        change password
+                      </a>
+                   </div>
+                  <!-- single link end -->
+                    <!-- single link -->
+                    <div class="space-y-1 pl-8 pt-4 ">
+                      <a href="#" class="relative hover:text-primary block font-medium capitalize  transition">
+                        <span class="absolute -left-8  top-0 text-base"><i class="far fa-address-card"></i></span>
+                        my order history
+                      </a>
+                      <a href="#" class="relative hover:text-primary block font-medium capitalize transition">
+                        my returns
+                      </a>
+                      <a href="#" class="relative hover:text-primary block font-medium capitalize transition">
+                         my concelltions
+                      </a>
+                      <a href="#" class="relative hover:text-primary block font-medium capitalize transition">
+                        my reviews
+                      </a>
+                   </div>
+                  <!-- single link end -->
+                   <!-- single link -->
+                   <div class="space-y-1 pl-8 pt-4 ">
+                    <a href="#" class="relative hover:text-primary block font-medium capitalize  transition">
+                      <span class="absolute -left-8  top-0 text-base"><i class="far fa-address-card"></i></span>
+                      payment methods
+                    </a> 
+                    <a href="#" class="relative hover:text-primary  block font-medium capitalize  transition">
+                      voucher
+                    </a>               
+                 </div>
+                <!-- single link end -->
+                   <!-- single link -->
+                   <div class="space-y-1 pl-8 pt-4 ">
+                    <a href="#" class="relative hover:text-primary  block font-medium capitalize  transition">
+                      <span class="absolute -left-8  top-0 text-base"><i class="fa-regular fa-heart"></i></i></span>
+                      my Wish list
+                    </a>               
+                 </div>
+                <!-- single link end -->
+                   <!-- single link -->
+                   <div class="space-y-1 pl-8 pt-4 ">
+                    <a href="#" class="relative hover:text-primary  block font-medium capitalize  transition">
+                      <span class="absolute -left-8  top-0 text-base"><i class="fa-solid fa-right-from-bracket"></i></span>
+                      log out
+                    </a>               
+                 </div>
+                <!-- single link end -->
+              </div>
+            <!-- profile links end -->
           </div>
         <!-- side bar end -->
+        <!-- profile info -->
+          <div class="col-span-9 grid grid-cols-3 gap-4">
+            	<!-- single card -->
+                 <div class="shadow rounded bg-white px-4 pt-6 pb-8">
+                       <div class="flex justify-between items-center mb-4"> 
+                            <h3 class="font-medium text-gray-800 text-lg">Personal profile</h3>
+                            <a href="#" class="text-primary"> Edit</a>
+                       </div>  
+                       <div class="space-y-1">
+                            <h4 class="text-gray-700 font-medium" >Sabbir Ahamed</h4>
+                            <p class="text-gray-800">exaple@gmail.com</p>
+                            <p class="text-gray-800">123-456-789</p>
+                       </div>                  
+                 </div>
+              <!-- single card end  -->
+                <!-- single card -->
+                <div class="shadow rounded bg-white px-4 pt-6 pb-8">
+                  <div class="flex justify-between items-center mb-4"> 
+                      <h3 class="font-medium text-gray-800 text-lg">Personal profile</h3>
+                      <a href="#" class="text-primary"> Edit</a>
+                  </div>  
+                  <div class="space-y-1">
+                      <h4 class="text-gray-700 font-medium" >Sabbir Ahamed</h4>
+                      <p class="text-gray-800">exaple@gmail.com</p>
+                      <p class="text-gray-800">123-456-789</p>
+                  </div>                  
+            </div>
+        <!-- single card end  -->
+            <!-- single card -->
+            <div class="shadow rounded bg-white px-4 pt-6 pb-8">
+              <div class="flex justify-between items-center mb-4"> 
+                  <h3 class="font-medium text-gray-800 text-lg">Personal profile</h3>
+                  <a href="#" class="text-primary"> Edit</a>
+              </div>  
+              <div class="space-y-1">
+                  <h4 class="text-gray-700 font-medium" >Sabbir Ahamed</h4>
+                  <p class="text-gray-800">exaple@gmail.com</p>
+                  <p class="text-gray-800">123-456-789</p>
+              </div>                  
+        </div>
+      <!-- single card end  -->
+          </div>
+        <!-- profile info end -->
     </div>
   <!-- account wrapper end -->
  
