--- a/shop.html
+++ b/shop.html
@@ -51,7 +51,7 @@
     </a>
 
       <!-- searchbar -->
-      <div class="w-full flex max-w-xl relative bg-slate-300">
+      <div class="w-full sm:flex max-w-xl  relative bg-slate-300 hidden ">
           <span class="absolute left-4 top-3 text-lg text-gray-400">
             <i class="fa-solid fa-magnifying-glass"></i>
           </span>
@@ -88,56 +88,77 @@
   <!-- header end -->
 
   <!-- navber -->
-  <nav class="bg-gray-800 ">
-    <div class="container flex items-center ">
-      <!-- all category -->
-      <div class="px-8 py-4 bg-primary cursor-pointer relative" id="allCetagory" >
-        <span class="text-white">
+    <nav class="bg-gray-800 relative">
+      <div class="container flex items-center ">
+        <!-- all category -->
+        <div class="px-8 py-4 bg-primary cursor-pointer relative" id="allCetagory" >
+          <span class="text-white">
+            <i class="fa-solid fa-bars"></i>
+          </span>
+          <span class="capitalize ml-2 text-white">
+            ALL category
+          </span>
+          <div class="absolute w-full left-0 top-full bg-white shadow-md py-3 divide-y divide-gray-300 divide-dashed hidden " id="categoryMenu" >
+             <a href="#" class="flex items-center px-6 py-3 hover:bg-gray-100 transition">
+               <img src="img/icons/bed.svg" class="w-5 h-5 object-contain" alt="">
+               <span class="ml-6 text-gray-600 text-sm">Beroom</span>
+             </a>
+             <a href="#" class="flex items-center px-6 py-3 hover:bg-gray-100 transition">
+              <img src="img/icons/sofa.svg" class="w-5 h-5 object-contain" alt="">
+              <span class="ml-6 text-gray-600 text-sm">sofa</span>
+            </a>
+            <a href="#" class="flex items-center px-6 py-3 hover:bg-gray-100 transition">
+              <img src="img/icons/office.svg" class="w-5 h-5 object-contain" alt="">
+              <span class="ml-6 text-gray-600 text-sm">office</span>
+            </a>
+            <a href="#" class="flex items-center px-6 py-3 hover:bg-gray-100 transition">
+              <img src="img/icons/terrace.svg" class="w-5 h-5 object-contain" alt="">
+              <span class="ml-6 text-gray-600 text-sm">outdoor</span>
+            </a>
+            <a href="#" class="flex items-center px-6 py-3 hover:bg-gray-100 transition">
+              <img src="img/icons/bed-2.svg" class="w-5 h-5 object-contain" alt="">
+              <span class="ml-6 text-gray-600 text-sm">mottress</span>
+            </a>
+            <a href="#" class="flex items-center px-6 py-3 hover:bg-gray-100 transition">
+              <img src="img/icons/restaurant.svg" class="w-5 h-5 object-contain" alt="">
+              <span class="ml-6 text-gray-600 text-sm">dining</span>
+            </a>
+          </div>
+        </div>
+          <!-- all nav lisks -->
+
+        <div class="sm:flex hidden items-center justify-between flex-grow pl-12 ">
+          <div class="flex items-center space-x-6 capitalize">
+            <a href="index.html" class="text-gray-200 hover:text-white transition"> home</a>
+            <a href="shop.html" class="text-gray-200 hover:text-white transition"> shop</a>
+            <a href="#" class="text-gray-200 hover:text-white transition"> about us</a>
+            <a href="#" class="text-gray-200 hover:text-white transition"> contact us</a>
+          </div>
+          <a href="#" class="text-gray-200 hover:text-white transition">login/register</a>
+        </div>
+
+        <!-- hamberger icon -->
+        <span class="text-white text-2xl absolute right-4 sm:hidden" id="menu">
           <i class="fa-solid fa-bars"></i>
         </span>
-        <span class="capitalize ml-2 text-white">
-          ALL category
-        </span>
-        <div class="absolute w-full left-0 top-full bg-white shadow-md py-3 divide-y divide-gray-300 divide-dashed hidden " id="categoryMenu" >
-           <a href="#" class="flex items-center px-6 py-3 hover:bg-gray-100 transition">
-             <img src="img/icons/bed.svg" class="w-5 h-5 object-contain" alt="">
-             <span class="ml-6 text-gray-600 text-sm">Beroom</span>
-           </a>
-           <a href="#" class="flex items-center px-6 py-3 hover:bg-gray-100 transition">
-            <img src="img/icons/sofa.svg" class="w-5 h-5 object-contain" alt="">
-            <span class="ml-6 text-gray-600 text-sm">sofa</span>
-          </a>
-          <a href="#" class="flex items-center px-6 py-3 hover:bg-gray-100 transition">
-            <img src="img/icons/office.svg" class="w-5 h-5 object-contain" alt="">
-            <span class="ml-6 text-gray-600 text-sm">office</span>
-          </a>
-          <a href="#" class="flex items-center px-6 py-3 hover:bg-gray-100 transition">
-            <img src="img/icons/terrace.svg" class="w-5 h-5 object-contain" alt="">
-            <span class="ml-6 text-gray-600 text-sm">outdoor</span>
-          </a>
-          <a href="#" class="flex items-center px-6 py-3 hover:bg-gray-100 transition">
-            <img src="img/icons/bed-2.svg" class="w-5 h-5 object-contain" alt="">
-            <span class="ml-6 text-gray-600 text-sm">mottress</span>
-          </a>
-          <a href="#" class="flex items-center px-6 py-3 hover:bg-gray-100 transition">
-            <img src="img/icons/restaurant.svg" class="w-5 h-5 object-contain" alt="">
-            <span class="ml-6 text-gray-600 text-sm">dining</span>
-          </a>
-        </div>
-      </div>
-        <!-- all nav lisks -->
+        <!-- hamberger icon  end-->
 
-      <div class="flex items-center justify-between flex-grow pl-12">
-        <div class="flex items-center space-x-6 capitalize">
-          <a href="index.html" class="text-gray-200 hover:text-white transition"> home</a>
-          <a href="shop.html" class="text-gray-200 hover:text-white transition"> shop</a>
-          <a href="#" class="text-gray-200 hover:text-white transition"> about us</a>
-          <a href="#" class="text-gray-200 hover:text-white transition"> contact us</a>
-        </div>
-        <a href="#" class="text-gray-200 hover:text-white transition">login/register</a>
-      </div>
-  </nav>
-<!-- navber end -->
+          <!-- all links for mobile version -->
+          <div class="flex absolute right-5 sm:hidden   mt-72 items-center justify-between flex-grow pl-12 z-10" >
+            <div class="flex  px-5 py-4  bg-gray-800 flex-col items-center space-y-6 capitalize" id="menuItem">
+              <a href="index.html" class="text-gray-200 hover:text-white transition"> home</a>
+              <a href="shop.html" class="text-gray-200 hover:text-white transition"> shop</a>
+              <a href="#" class="text-gray-200 hover:text-white transition"> about us</a>
+              <a href="#" class="text-gray-200 hover:text-white transition"> contact us</a>
+              <a href="#" class="text-gray-200 hover:text-white transition">login/register</a>
+            </div>
+            
+          </div>
+           <!-- all links for mobile version end--> 
+
+
+    </nav>
+  <!-- navber end -->
 
   <!-- breadcrums -->
   <div class="container py-4 gap-2 flex items-center">
